--- a/TEAM_03/22t1020350/3LED_BLINK/platformio.ini
+++ b/TEAM_03/22t1020350/3LED_BLINK/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env:esp32dev]
 platform = espressif32
-board = esp32-c3-devkitc-02
+board = esp32dev
 framework = arduino
