--- a/TEAM_05/NguyenCongHieu/Traffic_Light_New/platformio.ini
+++ b/TEAM_05/NguyenCongHieu/Traffic_Light_New/platformio.ini
@@ -8,10 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
-monitor_speed = 115200
-lib_deps =
-    https://github.com/avishorp/TM1637.git
+lib_deps = smougenot/TM1637@0.0.0-alpha+sha.9486982048
